Fix textarea placeholder text not visible

--- a/static/style.css
+++ b/static/style.css
@@ -68,7 +68,6 @@ footer {
 }
 
 #hidden-input {
-  color: transparent;
   background: transparent;
   caret-color: white;
   resize: none;
